
// ------------------------------------------------------------------------------------------------------------------
// This is auto generated code. Every manually change in this code will be overwritten at the next code generation! |
// ------------------------------------------------------------------------------------------------------------------
        
using DoofesZeug.Attributes;
using DoofesZeug.Attributes.Documentation;
using DoofesZeug.Attributes.Pattern;



namespace DoofesZeug.Models.Specieses.Human.Professions
{
    [Description("This is an specialized entitiy for an waiter.")]
    [Generated]
    [Builder]
    public class Waiter : Profession
    {
        public Waiter() : base(WellKnownProfession.Waiter)
        {
        }
    }
}
